Remove unnecessary search by field service
